objects/amc__Role_Availability__c.object
<CustomObject>
    <fields>
        <fullName>amc__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Identifies if the Role Availability record is set as the active record related to this Role</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Billable_Target__c</fullName>
        <inlineHelpText>Identifies the percentage of billable work per week the Role should achieve</inlineHelpText>
        <label>Billable Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__Days_per_Week__c</fullName>
        <formula>IF(amc__Monday__c &gt; 0, 1, 0) + IF(amc__Tuesday__c &gt; 0, 1, 0) + IF(amc__Wednesday__c &gt; 0, 1, 0) + IF(amc__Thursday__c &gt; 0, 1, 0) + IF(amc__Friday__c &gt; 0, 1, 0) + IF(amc__Saturday__c &gt; 0, 1, 0) + IF(amc__Sunday__c &gt; 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Identifies how many days contain a value greater than 0 to calculate the number of days per week the Role works</inlineHelpText>
        <label>Days per Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__End_Date__c</fullName>
        <inlineHelpText>Identifies the End Date the Role Availability applies to</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Friday__c</fullName>
        <defaultValue>IF(NOT(ISBLANK($Setup.amc__Rates__c.amc__Hours_Per_Day__c)), $Setup.amc__Rates__c.amc__Hours_Per_Day__c, 0)</defaultValue>
        <inlineHelpText>Identifies how many hours the Role is set to work on this day of the week</inlineHelpText>
        <label>Friday</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Hours_per_Week__c</fullName>
        <formula>amc__Monday__c + amc__Tuesday__c + amc__Wednesday__c + amc__Thursday__c + amc__Friday__c + amc__Saturday__c + amc__Sunday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Calculates the total hours the Role will work during the week based on the sum of all individual Day values</inlineHelpText>
        <label>Hours per Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Monday__c</fullName>
        <defaultValue>IF(NOT(ISBLANK($Setup.amc__Rates__c.amc__Hours_Per_Day__c)), $Setup.amc__Rates__c.amc__Hours_Per_Day__c, 0)</defaultValue>
        <inlineHelpText>Identifies how many hours the Role is set to work on this day of the week</inlineHelpText>
        <label>Monday</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Role record this Role Availability relates to</inlineHelpText>
        <label>Role</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Role Availabilities</relationshipLabel>
        <relationshipName>Role_Availabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Saturday__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Identifies how many hours the Role is set to work on this day of the week</inlineHelpText>
        <label>Saturday</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Start_Date__c</fullName>
        <inlineHelpText>Identifies the Start Date the Role Availability applies from</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Sunday__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Identifies how many hours the Role is set to work on this day of the week</inlineHelpText>
        <label>Sunday</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Thursday__c</fullName>
        <defaultValue>IF(NOT(ISBLANK($Setup.amc__Rates__c.amc__Hours_Per_Day__c)), $Setup.amc__Rates__c.amc__Hours_Per_Day__c, 0)</defaultValue>
        <inlineHelpText>Identifies how many hours the Role is set to work on this day of the week</inlineHelpText>
        <label>Thursday</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Tuesday__c</fullName>
        <defaultValue>IF(NOT(ISBLANK($Setup.amc__Rates__c.amc__Hours_Per_Day__c)), $Setup.amc__Rates__c.amc__Hours_Per_Day__c, 0)</defaultValue>
        <inlineHelpText>Identifies how many hours the Role is set to work on this day of the week</inlineHelpText>
        <label>Tuesday</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Wednesday__c</fullName>
        <defaultValue>IF(NOT(ISBLANK($Setup.amc__Rates__c.amc__Hours_Per_Day__c)), $Setup.amc__Rates__c.amc__Hours_Per_Day__c, 0)</defaultValue>
        <inlineHelpText>Identifies how many hours the Role is set to work on this day of the week</inlineHelpText>
        <label>Wednesday</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Role Availability</label>
    <listViews>
        <fullName>amc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RAV:{000000}</displayFormat>
        <label>Role Availability ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Role Availabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>